fix- create gap between card

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
 }
 /* //===============CONTAINER CSS================// */
 .container {
-  @apply max-w-[1320px] w-full mx-auto;
+  @apply max-w-[1320px] w-full mx-auto px-5 md:px-0;
 }
 
 /* // =================== HOME PAGE CSS ================// */
@@ -28,4 +28,12 @@
 .divider_2 {
   @apply max-w-[424px] w-full mx-auto h-1 bg-[#E8E8E8]  mt-5;
 }
+
+/* //========Order Online section css ==========// */
+
+.slick-list > div {
+  display: flex !important;
+  gap: 24px !important;
+}
+
 @tailwind utilities;
